compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__model_is_sorted_by_execution_order.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: "xml_parser::visit(src).unwrap()"
---
Project {
    pous: [
        Pou {
            name: "thistimereallyeasy",
            pou_type: Program,
            body: Body {
                function_block_diagram: Some(
                    FunctionBlockDiagram {
                        nodes: {
                            1: FunctionBlockVariable(
                                FunctionBlockVariable {
                                    kind: Input,
                                    local_id: 1,
                                    negated: false,
                                    expression: "a",
                                    execution_order_id: None,
                                    ref_local_id: None,
                                },
                            ),
                            3: FunctionBlockVariable(
                                FunctionBlockVariable {
                                    kind: Output,
                                    local_id: 3,
                                    negated: false,
                                    expression: "c",
                                    execution_order_id: Some(
                                        0,
                                    ),
                                    ref_local_id: Some(
                                        1,
                                    ),
                                },
                            ),
                            4: FunctionBlockVariable(
                                FunctionBlockVariable {
                                    kind: Output,
                                    local_id: 4,
                                    negated: false,
                                    expression: "d",
                                    execution_order_id: Some(
                                        1,
                                    ),
                                    ref_local_id: Some(
                                        1,
                                    ),
                                },
                            ),
                            2: FunctionBlockVariable(
                                FunctionBlockVariable {
                                    kind: Output,
                                    local_id: 2,
                                    negated: false,
                                    expression: "b",
                                    execution_order_id: Some(
                                        2,
                                    ),
                                    ref_local_id: Some(
                                        1,
                                    ),
                                },
                            ),
                        },
                    },
                ),
            },
            actions: [],
            interface: Some(
                Interface {
                    add_data: Some(
                        Data {
                            content: "\n    PROGRAM thistimereallyeasy\n    VAR\n        a, b, c, d : DINT;\n    END_VAR\n                        \nEND_PROGRAM",
                            handle: Implementation,
                        },
                    ),
                },
            ),
        },
    ],
}
