compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__return_connected_to_sink_parses.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: "parse(&content.serialize()).0.implementations[0].statements"
---
[
    ReturnStatement {
        condition: Some(
            BinaryExpression {
                operator: Less,
                left: ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "x",
                        },
                    ),
                    base: None,
                },
                right: LiteralInteger {
                    value: 0,
                },
            },
        ),
    },
    Assignment {
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "positiveOrZero",
                },
            ),
            base: None,
        },
        right: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
    },
]
