compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__sink_source_data_recursion_does_not_overflow_the_stack.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: diagnostics
---
[
    SemanticError {
        message: "Sink must not be connected to associated source: s3 -> s2 -> s1 -> s3",
        range: [
            SourceLocation {
                span: Block {
                    local_id: 26,
                    execution_order: None,
                    inner_range: None,
                },
                file: Some(
                    "test",
                ),
            },
        ],
        err_no: cfc__cyclic_connection,
    },
    SemanticError {
        message: "Sink must not be connected to associated source: s1 -> s3 -> s2 -> s1",
        range: [
            SourceLocation {
                span: Block {
                    local_id: 23,
                    execution_order: None,
                    inner_range: None,
                },
                file: Some(
                    "test",
                ),
            },
        ],
        err_no: cfc__cyclic_connection,
    },
    SemanticError {
        message: "Sink must not be connected to associated source: s2 -> s1 -> s3 -> s2",
        range: [
            SourceLocation {
                span: Block {
                    local_id: 24,
                    execution_order: None,
                    inner_range: None,
                },
                file: Some(
                    "test",
                ),
            },
        ],
        err_no: cfc__cyclic_connection,
    },
]
